--- a/style.css
+++ b/style.css
@@ -1,8 +1,5 @@
 body {
 
-background-color : red;
-<<<<<<< HEAD
-=======
+background-color : green;
 color:black;
->>>>>>> 4492c6826a9aa47e3af9dacf5bac1585bd87c0ad
 }
